test/corpus/L1/positive/block-empty.st
"---
id: block-empty
kind: positive
phase: parse
layer: L1
spec: anexoA:block.empty
origin: spec-ANSI
section: block.empty
note: empty block literal with no params or body
---"
[]
