test/corpus/L1/negative/unexpected-char.st
"---
id: unexpected-char
kind: negative
phase: lex
layer: L1
spec: anexoA:error.unexpected-char
origin: spec-ANSI
section: error.unexpected-char
codes: E_UNEXPECTED_CHAR
---"
`
